--- a/mini-portfolio/index.html
+++ b/mini-portfolio/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://drive.google.com/file/d/1LeXh8D1iD1Mz8kUSEyKS3VqNMRIcqInA/view?usp=sharing" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" 
+    crossorigin>
+    <link href="https://drive.google.com/file/d/1LeXh8D1iD1Mz8kUSEyKS3VqNMRIcqInA/view" 
+    rel="stylesheet">
 
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/estilos.css">
