--- a/mini-portfolio/index.html
+++ b/mini-portfolio/index.html
@@ -10,7 +10,6 @@
     crossorigin>
     <link href="https://drive.google.com/file/d/1LeXh8D1iD1Mz8kUSEyKS3VqNMRIcqInA/view" 
     rel="stylesheet">
-
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/estilos.css">
     <link rel="stylesheet" href="./src/css/rolagem.css">
@@ -55,7 +54,7 @@
 
             <ul class="redes-sociais">
                 <li>
-                    <a href="https://drive.google.com/file/d/1_DRq7voSAchhbYMZipyd7iWEFKdyShYr/view?usp=sharing" 
+                    <a href="https://drive.google.com/file/d/1LeXh8D1iD1Mz8kUSEyKS3VqNMRIcqInA/view" 
                     target="_blank" 
                     class="curriculo">Currículo</a>
                 </li>
