--- a/mini-portfolio/index.html
+++ b/mini-portfolio/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" 
     crossorigin>
-    <link href="https://drive.google.com/file/d/1LeXh8D1iD1Mz8kUSEyKS3VqNMRIcqInA/view" 
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" 
     rel="stylesheet">
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/estilos.css">
