--- a/mini-portfolio/index.html
+++ b/mini-portfolio/index.html
@@ -54,7 +54,7 @@
 
             <ul class="redes-sociais">
                 <li>
-                    <a href="https://drive.google.com/file/d/1LeXh8D1iD1Mz8kUSEyKS3VqNMRIcqInA/view" 
+                    <a href="https://drive.google.com/file/d/1fSHE1ARIENn1RFI3908f0R0n7B09ls7m/view?usp=share_link" 
                     target="_blank" 
                     class="curriculo">Currículo</a>
                 </li>
